kubectl/workout-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file ..\deploy.docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: workout-backend
  name: workout-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: workout-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file ..\deploy.docker-compose.yml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/m347-docker-workout-network: "true"
        io.kompose.service: workout-backend
    spec:
      containers:
        - env:
            - name: DB_PASSWORD
              value: jhhjhjghgdgfghkjgfghjkkhgfhjkljhgfghjkljhgfhjklelbgajhvapirgulökhabrgönNAEÖVBJN123
            - name: DB_USER
              value: pgWorkout
            - name: spring.datasource.url
              value: jdbc:postgresql://workout_postgres:5432/pgWorkout
          image: mimasala/workout-backend:main
          name: workout-backend
          ports:
            - containerPort: 9876
          resources: {}
      restartPolicy: Always
status: {}
