kubectl/workout-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file ..\deploy.docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: workout-frontend
  name: workout-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: workout-frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file ..\deploy.docker-compose.yml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/m347-docker-workout-network: "true"
        io.kompose.service: workout-frontend
    spec:
      containers:
        - image: mimasala/workout-frontend:main
          name: workout-frontend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
