kubectl/workout_backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file ..\deploy.docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: workout-backend
  name: workout_backend
spec:
  ports:
    - name: "9876"
      port: 9876
      targetPort: 9876
  selector:
    io.kompose.service: workout-backend
status:
  loadBalancer: {}
