kubectl/m347-docker-workout-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: m347-docker-workout-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/m347-docker-workout-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/m347-docker-workout-network: "true"
